# bond-haskell

./: .codeclimate.yml  .gitignore  .travis.yml  README.md  stack.yaml
compiler/: LICENSE  bond-haskell-compiler.cabal
compiler/app/: IO.hs  Main.hs  Options.hs
compiler/src/: Main.hs  Options.hs
compiler/src/Language/Bond/Codegen/Haskell/: AliasDecl.hs  Decl.hs  EnumDecl.hs  SchemaDecl.hs  ServiceDecl.hs  StructDecl.hs  TypeMapping.hs  Util.hs
rpc/: Setup.hs  bond-haskell-comm.cabal
rpc/schema/transport/: packet.bond
rpc/src/Network/: Bond.hs
rpc/src/Network/Bond/: CommClient.hs
rpc/src/Network/Bond/Internal/: CommSocket.hs  Imports.hs
rpc/src/Network/Bond/Internal/CommSocket/: Net.hs
rpc/src/Network/Bond/Internal/Epoxy/: Client.hs  Frame.hs  ProtocolException.hs
rpc/test/: Spec.hs
rpc/test/rpc_schemas/: calculator.bond  test.bond
runtime/: Setup.hs  bond-haskell.cabal
runtime/bench/: Bench.hs
runtime/bench/schemas/: bench.bond
runtime/schema/: bond.bond
runtime/schema/comm/transport/: epoxy_transport.bond  packet.bond
runtime/src/Data/: Bond.hs
runtime/src/Data/Bond/: BinaryClass.hs  BinaryUtils.hs  Bonded.hs  Bonded.hs-boot  Cast.hs  CompactBinaryProto.hs  CompactBinaryProto.hs-boot  CompactBinaryV1Proto.hs  ContextWriter.hs  Default.hs  Default.hs-boot  FastBinaryProto.hs  FastBinaryProto.hs-boot  Imports.hs  Imports.hs-boot  JsonProto.hs  JsonProto.hs-boot  Marshal.hs  Marshal.hs-boot  Monads.hs  Proto.hs  Proto.hs-boot  Schema.hs  Schema.hs-boot  SimpleBinaryProto.hs  SimpleBinaryProto.hs-boot  SimpleBinaryV1Proto.hs  Struct.hs  TaggedProtocol.hs  TypedSchema.hs  Types.hs  Utils.hs  Wire.hs  ZigZag.hs
runtime/src/Data/Bond/Internal/: BinaryClass.hs  BinaryUtils.hs  Bonded.hs  Bonded.hs-boot  BondedUtils.hs  Cast.hs  CompactBinaryProto.hs  CompactBinaryProto.hs-boot  Default.hs  Enum.hs  FastBinaryProto.hs  FastBinaryProto.hs-boot  Imports.hs  Imports.hs-boot  JsonProto.hs  JsonProto.hs-boot  MarshalUtils.hs  OrdinalSet.hs  ProtoUtils.hs  Protocol.hs  Protocol.hs-boot  SchemaOps.hs  SchemaUtils.hs  SimpleBinaryProto.hs  SimpleBinaryProto.hs-boot  TaggedProtocol.hs  TypedSchema.hs  Utils.hs  ZigZag.hs
runtime/test/: Spec.hs
runtime/test/broken_schemas/: index_out_of_range.json  inherit_from_int.json  inheritance_loop.json
runtime/test/simple_schemas/: test.bond  test.inner.json  test.outer.json
