name:                bond-haskell
version:             0.1.0.0
synopsis:            Runtime support for BOND serialization
description:         Bond is a cross-platform framework for handling schematized
                     data. It supports cross-language de/serialization and
                     powerful generic mechanisms for efficiently manipulating
                     data.
                     .
                     This package contains a runtime library used by generated
                     Haskell code.
homepage:            http://github.com/rblaze/bond-haskell-runtime#readme
license:             BSD3
license-file:        LICENSE
author:              Andrey Sverdlichenko <blaze@ruddy.ru>
maintainer:          Andrey Sverdlichenko <blaze@ruddy.ru>
copyright:           (C) 2015 Andrey Sverdlichenko
category:            Data,Parsing
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.18

library
  hs-source-dirs:      src
  exposed-modules:     Data.Bond
                       Data.Bond.Imports
                       Data.Bond.Schema
  other-modules:       Data.Bond.Cast
                       Data.Bond.Default
                       Data.Bond.FastBinaryProto
                       Data.Bond.Monads
                       Data.Bond.Proto
                       Data.Bond.SimpleBinaryProto
                       Data.Bond.Types
                       Data.Bond.Utils
                       Data.Bond.Wire
                       Data.Bond.Schema.BondDataType
                       Data.Bond.Schema.FieldDef
                       Data.Bond.Schema.Metadata
                       Data.Bond.Schema.Modifier
                       Data.Bond.Schema.SchemaDef
                       Data.Bond.Schema.StructDef
                       Data.Bond.Schema.TypeDef
                       Data.Bond.Schema.Variant
  build-depends:       base >= 4.7 && < 5
--                     , bond-haskell-compiler
                     , array
                     , binary >= 0.7.0.0
                     , bytestring >= 0.10
                     , containers >= 0.4
                     , hashable >= 1.0
                     , mtl >= 2.1
                     , text >= 0.11
                     , unordered-containers >= 0.2
                     , vector >= 0.10
  default-language:    Haskell2010
  ghc-options:         -threaded -W -Wall

test-suite bond-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bond-haskell
                     , bytestring >= 0.10
                     , filepath >= 1.0
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -W -Wall -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rblaze/bond-haskell
