name:                bond-haskell
version:             0.1.0.0
synopsis:            Runtime support for BOND serialization
description:         Bond is a cross-platform framework for handling schematized
                     data. It supports cross-language de/serialization and
                     powerful generic mechanisms for efficiently manipulating
                     data.
                     .
                     This package contains a runtime library used by generated
                     Haskell code.
homepage:            http://github.com/rblaze/bond-haskell-runtime#readme
license:             BSD3
license-file:        LICENSE
author:              Andrey Sverdlichenko <blaze@ruddy.ru>
maintainer:          Andrey Sverdlichenko <blaze@ruddy.ru>
copyright:           (C) 2015 Andrey Sverdlichenko
category:            Data,Parsing
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.18

library
  hs-source-dirs:      src
  exposed-modules:     Data.Bond
                       Data.Bond.Imports
                       Data.Bond.Marshal
                       Data.Bond.Proto
                       Data.Bond.Struct
                       Data.Bond.TypedSchema
                       Data.Bond.Types
                       Data.Bond.Internal.ZigZag
                       Data.Bond.Schema.BondDataType
                       Data.Bond.Schema.FieldDef
                       Data.Bond.Schema.Metadata
                       Data.Bond.Schema.Modifier
                       Data.Bond.Schema.SchemaDef
                       Data.Bond.Schema.StructDef
                       Data.Bond.Schema.TypeDef
                       Data.Bond.Schema.Variant
  other-modules:       Data.Bond.Internal.BinaryClass
                       Data.Bond.Internal.BinaryUtils
                       Data.Bond.Internal.Bonded
                       Data.Bond.Internal.BondedUtils
                       Data.Bond.Internal.Cast
                       Data.Bond.Internal.CompactBinaryProto
                       Data.Bond.Internal.Default
                       Data.Bond.Internal.FastBinaryProto
                       Data.Bond.Internal.JsonProto
                       Data.Bond.Internal.MarshalUtils
                       Data.Bond.Internal.OrdinalSet
                       Data.Bond.Internal.Protocol
                       Data.Bond.Internal.ProtoUtils
                       Data.Bond.Internal.SchemaOps
                       Data.Bond.Internal.SchemaUtils
                       Data.Bond.Internal.SimpleBinaryProto
                       Data.Bond.Internal.TaggedProtocol
                       Data.Bond.Internal.Utils
                       Data.Bond.Internal.Utils
                       Data.Bond.Schema.ProtocolType
  build-depends:       base >= 4.7 && < 5
--                     , bond-haskell-compiler
                     , aeson
                     , array
                     , binary >= 0.7.0.0
                     , bytestring >= 0.10
                     , containers >= 0.4
                     , extra >= 1.0
                     , hashable >= 1.0
                     , mtl >= 2.1
                     , scientific
                     , text >= 0.11
                     , unordered-containers >= 0.2
                     , vector >= 0.10
  default-language:    Haskell2010
  ghc-options:         -threaded -W -Wall -fno-warn-warnings-deprecations

test-suite bond-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       DataPath
                       Unittest.Compat.Another.Another
                       Unittest.Compat.Another.EnumType
                       Unittest.Compat.BasicTypes
                       Unittest.Compat.BasicTypesUninitialized
                       Unittest.Compat.Compat
                       Unittest.Compat.Containers
                       Unittest.Compat.EnumType1
                       Unittest.Compat.EnumType2
                       Unittest.Compat.Generic1
                       Unittest.Compat.Generic2
                       Unittest.Compat.Generic4
                       Unittest.Compat.WithBase
                       Unittest.Simple.Base
                       Unittest.Simple.Inner
                       Unittest.Simple.Outer
                       Unittest.Simple.Reqopt                       
  build-depends:       base
                     , aeson
                     , bond-haskell
                     , bytestring >= 0.10
                     , containers >= 0.4
                     , either
                     , filepath >= 1.0
                     , mtl >= 2.1
                     , tasty
                     , tasty-golden
                     , tasty-hunit
                     , tasty-quickcheck
                     , unordered-containers >= 0.2
  ghc-options:         -threaded -W -Wall -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rblaze/bond-haskell
